--- a/package.json
+++ b/package.json
@@ -10,15 +10,21 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "bootstrap": "^4.5.0",
+    "copy-to-clipboard": "^3.3.1",
+    "fibers": "^5.0.0",
+    "jquery": "^3.5.1",
     "node-sass": "^4.14.1",
+    "popper.js": "^1.16.1",
     "react": "^16.13.1",
-    "react-bootstrap": "^1.0.1",
+    "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
     "react-rating": "^2.0.5",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.1",
+    "react-scripts": "^3.4.1",
     "react-select": "^3.1.0",
-    "sweetalert2": "^9.13.2"
+    "sass": "^1.26.10",
+    "sweetalert2": "^9.17.1",
+    "typescript": "^3.9.7"
   },
   "scripts": {
     "start": "react-scripts start",
